updated tests to POM